--- a/Merge.ipynb
+++ b/Merge.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "8961f760",
+   "id": "4a728309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b96c8ef7",
+   "id": "cdb303b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "7ed04688",
+   "id": "7c199698",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8a8c2d9c",
+   "id": "8b418151",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7ece577f",
+   "id": "55ef31be",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "820e9910",
+   "id": "70465b25",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "e7e76379",
+   "id": "e6508ce4",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "3350966c",
+   "id": "fefd07fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "b53c7c93",
+   "id": "ba6530c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "0fb58516",
+   "id": "433c8fae",
    "metadata": {
     "scrolled": true
    },
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "c554a342",
+   "id": "14ed5672",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "5426dacc",
+   "id": "f1192983",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1b8a8fff",
+   "id": "f2ff8981",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "3a5b0adb",
+   "id": "6e72d0d8",
    "metadata": {
     "scrolled": true
    },
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "cfcdc05c",
+   "id": "89c8b421",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "65187c5c",
+   "id": "c7f83c78",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "1c8afee0",
+   "id": "8b9f2a37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "3cf0cdd6",
+   "id": "7f06bc2c",
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "eb6a47be",
+   "id": "e11a8c20",
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "8192866f",
+   "id": "e4bd5bfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1357,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "55c376c2",
+   "id": "098e9045",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "31cb3f97",
+   "id": "94f2a2e4",
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "47027a7a",
+   "id": "fa37a63f",
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "95b94823",
+   "id": "16c24c3c",
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "96b176e4",
+   "id": "4b3940f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1533,7 +1533,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "a23b2b7c",
+   "id": "be908133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "628a8cd6",
+   "id": "3bc2c227",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "4c9f9d92",
+   "id": "d792b189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1563,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "dce994f8",
+   "id": "0fe24817",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "8ccd4996",
+   "id": "024febc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "9f7b1f89",
+   "id": "35aca2e7",
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1617,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c842c500",
+   "id": "70341962",
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1658,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "e342058a",
+   "id": "14d5bdff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1668,7 +1668,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "f953b83e",
+   "id": "1d00c1de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,7 +1678,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "ee84e779",
+   "id": "b7596a5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1688,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "0e5e18d4",
+   "id": "c45de219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "a7cd11d4",
+   "id": "b2c03226",
    "metadata": {},
    "outputs": [
     {
@@ -1807,7 +1807,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "b4085de4",
+   "id": "751df43d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1817,7 +1817,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "7d50bef1",
+   "id": "31d7c341",
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +1851,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "1fbefdf0",
+   "id": "ecad63cd",
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1890,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "bed02f07",
+   "id": "ccb8476f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1901,7 +1901,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "358df185",
+   "id": "2a38e069",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "71da4056",
+   "id": "fd1250ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "f22e534c",
+   "id": "94665665",
    "metadata": {},
    "outputs": [
     {
@@ -1968,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "83013aee",
+   "id": "f06c2646",
    "metadata": {},
    "outputs": [
     {
@@ -2144,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "5e74b6bf",
+   "id": "32337f4e",
    "metadata": {},
    "outputs": [
     {
@@ -2168,7 +2168,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "b5fe504e",
+   "id": "523bfc18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2178,7 +2178,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "a7cc0694",
+   "id": "d5c2e4a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2190,7 +2190,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "47e8d026",
+   "id": "d3a2965d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2200,7 +2200,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "fdaa7c97",
+   "id": "97f4afc8",
    "metadata": {},
    "outputs": [
     {
@@ -2236,7 +2236,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "e971dfd9",
+   "id": "1491656d",
    "metadata": {},
    "outputs": [
     {
@@ -2268,7 +2268,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "71e8127b",
+   "id": "6d21e0f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2278,7 +2278,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "e461558a",
+   "id": "3d92a66f",
    "metadata": {
     "scrolled": true
    },
@@ -2323,7 +2323,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "07b15068",
+   "id": "6714dbdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2333,7 +2333,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "c6c71f12",
+   "id": "5893b3cd",
    "metadata": {
     "scrolled": true
    },
@@ -2594,7 +2594,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "2fe19f60",
+   "id": "723d74a1",
    "metadata": {},
    "outputs": [
     {
@@ -2712,7 +2712,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "576f2f9c",
+   "id": "75e11b85",
    "metadata": {},
    "outputs": [
     {
@@ -2843,7 +2843,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "a71df46d",
+   "id": "b824bd77",
    "metadata": {},
    "outputs": [
     {
@@ -2917,7 +2917,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "61cb0abf",
+   "id": "147fa23f",
    "metadata": {},
    "outputs": [
     {
@@ -2950,7 +2950,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "58d1782d",
+   "id": "5051dc2b",
    "metadata": {},
    "outputs": [
     {
@@ -2983,7 +2983,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "61170ea0",
+   "id": "a4b9125e",
    "metadata": {},
    "outputs": [
     {
@@ -3016,7 +3016,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "2d98537b",
+   "id": "4349c872",
    "metadata": {},
    "outputs": [
     {
@@ -3049,7 +3049,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "974bed90",
+   "id": "aa0e5087",
    "metadata": {},
    "outputs": [
     {
@@ -3082,7 +3082,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "e668cdb2",
+   "id": "f4ba459a",
    "metadata": {},
    "outputs": [
     {
@@ -3199,7 +3199,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "913bbfc0",
+   "id": "cff899de",
    "metadata": {},
    "outputs": [
     {
@@ -3220,7 +3220,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "d0d36516",
+   "id": "a421abfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3230,7 +3230,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "13c56321",
+   "id": "e62855aa",
    "metadata": {},
    "outputs": [
     {
@@ -3706,7 +3706,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "c7261398",
+   "id": "0a87c78b",
    "metadata": {},
    "outputs": [
     {
@@ -3759,7 +3759,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "66bcad45",
+   "id": "1e60c005",
    "metadata": {},
    "outputs": [
     {
@@ -3791,7 +3791,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "c70128b0",
+   "id": "6e360b93",
    "metadata": {},
    "outputs": [
     {
@@ -3830,7 +3830,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "95c38c1d",
+   "id": "b51db319",
    "metadata": {},
    "outputs": [
     {
@@ -3961,7 +3961,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "82d25c39",
+   "id": "ff20432a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3971,7 +3971,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "8248b2c2",
+   "id": "ea7712e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3985,7 +3985,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "6b473373",
+   "id": "bdb475e8",
    "metadata": {},
    "outputs": [
     {
@@ -4477,7 +4477,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "a6bda548",
+   "id": "9be48323",
    "metadata": {},
    "outputs": [
     {
@@ -4500,7 +4500,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "eeecdeac",
+   "id": "a8a46a5a",
    "metadata": {},
    "outputs": [
     {
@@ -4522,7 +4522,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "85d086ed",
+   "id": "b30cf4e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4537,7 +4537,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "0b19c4d6",
+   "id": "82fc5e43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4561,8 +4561,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 145,
+   "id": "e555beb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "7b5100da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "c1279614",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "26162d27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "ec408ad5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "1514ee21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "994cc007",
+   "id": "74d2da65",
    "metadata": {},
    "outputs": [],
    "source": []
